--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.20.0",
     "bnc-notify": "^1.5.0",
     "burner-provider": "^1.0.38",
+    "classnames": "^2.3.1",
     "dotenv": "^8.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eth-hooks": "2.3.8",
