--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -61,6 +61,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-stack-grid": "^0.7.1",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1"
